--- a/about-me.html
+++ b/about-me.html
@@ -75,7 +75,7 @@
                 <address id="about" class="vcard body">
                 Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
-                <p><a href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
+                <p><a target="_blank" href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
     <script type="text/javascript">
