--- a/gsoc14-progress-working-with-geometry.html
+++ b/gsoc14-progress-working-with-geometry.html
@@ -111,7 +111,7 @@ Currently I’m working(stuck) on locating mirrors in space. It’s an amalgamat
                 <address id="about" class="vcard body">
                 Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
-                <p><a href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
+                <p><a target="_blank" href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
     <script type="text/javascript">
