--- a/archives.html
+++ b/archives.html
@@ -32,6 +32,8 @@
 <h1>Archives for Shortlog</h1>
 
 <dl>
+    <dt>Tue 14 July 2015</dt>
+    <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-fourth-biweekly-update/">GSoC'15: Fourth biweekly update</a></dd>
     <dt>Wed 01 July 2015</dt>
     <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-midterm-updates/">GSoC'15: Mixing both assumption systems, Midterm updates</a></dd>
     <dt>Tue 09 June 2015</dt>
